2008-05-08  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pdf.trm (ENHPDF_FLUSH ENHPDF_put_text):  We correctly issue 
	save/restore requests to PDFlib, but we need to mirror these in the
	terminal code so that we track what font is currently selected.

2008-05-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_set_font)
	src/wxterminal/gp_cairo.h:
	Look for "Bold" and "Italic" in requested font name, and translate
	this into a request for the corresponding variant of the base font.
	Accept standard Adobe font names by treating hyphens as spaces.
	Tracker item #1958227

2008-05-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tables.h src/tables.c (lookup_table_entry):  New utility routine
	for table lookup of a string, as opposed to a token index.

	* term/fig.trm:  Extend point types to match standard sequence for the
	the first 13 types.  Accept option syntax "set term fig ... size xx,yy".
	Add a table lookup for font names known to fig, so that the terminal
	accepts for example 'set term fig font "Palatino Italic, 11"'.

2008-05-01  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to gnuplot.doc revision 1.495

2008-05-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm: Add a user-editable definition of Gamma at the head of
	PostScript output files.  This currently affects only grayscale images.
	Bug #1869824

2008-04-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.h src/graphics.c (adjust_offsets do_plot) src/graphics.h
	src/save.c (save_offsets) src/save.h src/set.c (set_offsets)
	src/show.c (show_offsets) src/unset.c (unset_offsets) docs/gnuplot.doc:
	Allow graph offsets to be given in graph coordinates.
	Feature Request #1849366

	* demo/electron.dem:  Do not pretend x2 is a separately scaled axis.
	Bug #1744139

2008-04-28  Bastian Maerkisch  <bmaerkisch@web.de>
